syntax = "proto3";

package pb;

option go_package = "./;pb";

import "common.proto";

service Clientapi {
  rpc UpdateProfile (UpdateProfileReq) returns (Empty) {}
}

message UpdateProfileReq {
    string userID = 1;
    string displayName = 2;
    string avatarUrl = 3;
    string presence = 4;
    string statusMsg = 5;
    string extStatusMsg = 6;
    string userName = 7;
    string jobNumber = 8;
    string mobile = 9;
    string landline = 10;
    string email = 11;
    int32 state = 12;
}