syntax = "proto3";

package pb;

option go_package = "./;pb";

service PublicRoom {
  rpc QueryPublicRoomState (QueryPublicRoomStateReq) returns (QueryPublicRoomStateRsp) {}
}

message QueryPublicRoomStateReq {
    int64 limit = 1;
    string since = 2;
    string filter = 3;
}

message PublicRoomState {
    string roomID = 1;
    repeated string aliases = 2;
    string canonicalAlias = 3;
    string name = 4;
    string topic = 5;
    string avatarURL = 6;
    int64 numJoinedMembers = 7;
    bool worldReadable = 8;
    bool guestCanJoin = 9;
}

message QueryPublicRoomStateRsp {
    repeated PublicRoomState chunk = 1;
    string nextBatch = 2;
    string prevBatch = 3;
    int64 estimate = 4;
}
