syntax = "proto3";

package pb;

option go_package = "./;pb";

import "common.proto";

service TokenWriter {
  rpc UpdateToken (UpdateTokenReq) returns (Empty) {}
}

message UpdateTokenReq {
    string userID = 1;
    string deviceID = 2;
    string token = 3;
    string displayName = 4;
    string identifier = 5;
}